# execer

./: .gitignore  Errors_messages.py  Excel_Profiles_Data.py  Functions.py  Graphs.py  Import_Py_Packages.py  Members_Plants.py  Parameters.py  Profile_OPT.py  README.md  execer.py  hello.py  installazione_compilazione_iopt.md  pyproject.toml  qq.py  z___figures\parameters.txt  z___figures\profile_opt.txt  z___figures\result_opt.npz  z___figures\results_check.txt
dati_statistici_profili/: linear_15m_profiles.xlsx
simulazioni_CER_opt/240910/z___figures - 1h/: parameters.txt  results_check.txt
simulazioni_CER_opt/240910/z___figures - 3h/: parameters.txt  results_check.txt
simulazioni_CER_opt/240910/z___figures - 6h/: parameters.txt  results_check.txt
simulazioni_CER_opt/240918/z___figures_(other members, flex, 1h, fix_cgrid)/: parameters.txt  profile_opt.txt  results_check.txt
simulazioni_CER_opt/240918/z___figures_(other members, flex, 3h, fix_cgrid)/: parameters.txt  results_check.txt
simulazioni_CER_opt/240918/z___figures_(other members, flex, 6h, dyn_cgrid)/: parameters.txt  results_check.txt
simulazioni_CER_opt/240918/z___figures_(other members, flex, 6h, fix_cgrid)/: parameters.txt  results_check.txt
simulazioni_CER_opt/240918/z___figures_(other members, flex, 8h, dyn_cgrid)/: parameters.txt  profile_opt.txt  results_check.txt
simulazioni_CER_opt/240918/z___figures_(other members, flex, 8h, fix_cgrid)/: parameters.txt  results_check.txt
z___figures/: parameters.txt  profile_opt.txt  result_opt.npz  results_check.txt
(+3 files in other folders)
